# toyai

./: .gitignore  AGENTS.md  BOOK.md  CMakeLists.txt  LICENSE  README.md  transformer_2x2.cpp
.cursor/: CHAT_HISTORY_GUIDE.md  find_workspace.sh
book/: 00-index.md  00-introduction.md  00a-preface.md  00b-toc.md  00c-introduction.md  01-neural-network-fundamentals.md  01-neural-networks-perceptron.md  01-terminology-foundations.md  01-why-transformers.md  02-matrix-core.md  02-multilayer-networks-architecture.md  02-probability-statistics.md  02a-probability-statistics.md  03-embeddings.md  03-learning-algorithms.md  03-multilayer-networks-architecture.md  04-attention-intuition.md  04-learning-algorithms.md  04-training-neural-networks.md  05-example1-forward-pass.md  05-matrix-core.md  05-training-neural-networks.md  05-why-transformers.md  06-embeddings.md  06-example1-forward-pass.md  06-example2-single-step.md  07-attention-intuition.md  07-example2-single-step.md  07-example3-full-backprop.md  08-example3-full-backprop.md  08-example4-multiple-patterns.md  08-why-transformers.md  09-example1-forward-pass.md  09-example4-multiple-patterns.md  09-example5-feedforward.md  10-example2-single-step.md  10-example5-feedforward.md  10-example6-complete.md  11-example3-full-backprop.md  11-example6-complete.md  (+13 more)
book-review/: README.md  completion-prompt.md  comprehensive-review.md
diagram_generator/: __init__.py  __main__.py  cli.py
docs/: TRANSFORMER_EXPLAINED.md
scripts/: BUILD_SYSTEM.md  QUICK_START.md  README.md  UPDATE_BOOK.md  build_book.py  build_cache.py  build_latex_book.py  build_manifest.py  calculate-bounding-box.py  convert_svg_to_pdf.py  export-plain-svg.md  fix-circle-connectors.py  fix-connector-paths.py  fix-svg-arrows.py  fix-svg-connectors.py  generate_activation_function_diagrams.py  generate_activation_graphs.py  generate_all_probability_diagrams.py  generate_hyperplane_3d.py  generate_pdf.py  generate_postscript.py  generate_probability_diagrams.py  generate_word.py  md_to_word.py  validate_diagram_quality.py  view_hyperplane_3d_interactive.py
src/: tiny_transformer.cpp
strategy/: README.md  content-calendar.md  credibility-building.md  engagement-tactics.md  learning-journey-map.md  post-templates.md  viral-hooks.md
templates/: book_template.tex  book_template_sage.tex
worksheets/: example1_worksheet.md  example2_worksheet.md  example3_worksheet.md  example4_worksheet.md  example5_worksheet.md  (+2 more)
(+128 files in other folders)
